--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>FCC - SURVEY FORM</title>
     </head>
     <body>
-        
+        <h1 id="title">FreeCodeCamp Survey Form</h1>
+        <p id="description">Thank you for taking the time
+        to help us improve the platform
+        </p>
     </body>
 </html>
