added the form inputs; name, email, age

--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
         <p id="description">Thank you for taking the time
         to help us improve the platform
         </p>
+
+        <form id="survey-form">
+            <label for="name">Name</label>
+            <input id="name" type="text" name="name"
+            placeholder="Enter your name here please"
+            required>
+            <br>
+
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email"
+            placeholder="And your email here" 
+            required>
+            <br>
+
+            <label for="number">Age(optional)</label>
+            <input id="number" type="number" name="number"
+            placeholder="Age" min="10" max="100" 
+            required>
+            <br>
+            
+        </form>
     </body>
 </html>
