First dropdown input type

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
                 <option id="prefer-not-to-say">Prefer not to say</option>
                 <option id="other">Other</option>
             </select>
+            <br>
+
+            <label for="recommendation">Would you recommend FreeCodeCamp to a friend?</label>
+            <input id="recommendation" type="radio" id="definitely" name="recommendation" value="definitely">
+            <label for="recommendation">Definitely</label>
+
+            <input id="recommendation" type="radio" id="maybe" name="recommendation" value="maybe">
+            <label for="recommendation">Maybe</label>
+
+            <input id="recommendation" type="radio" id="not-sure" name="recommendation" value="maybe">
+            <label for="recommendation">Not Sure</label>
+        
         </form>
     </body>
 </html>
