added features dropdown

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 
             <input id="recommendation" type="radio" id="not-sure" name="recommendation" value="maybe">
             <label for="recommendation">Not Sure</label>
+
+            <label for="features-dropdown">What is your favorite feature of FreeCodeCamp?</label>
+            <select id="features-dropdown" form="survey-form">
+                <option value="" disabled selected>Select an option</option>
+                <option id="challenges">Challenges</option>
+                <option id="projects">Projects</option>
+                <option id="community">Community</option>
+                <option id="open-source">Open source</option>
+            </select>
         
         </form>
     </body>
