added checkbox to form

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
             <input id="recommendation" type="radio" id="not-sure" name="recommendation" value="maybe">
             <label for="recommendation">Not Sure</label>
+            <br>
 
             <label for="features-dropdown">What is your favorite feature of FreeCodeCamp?</label>
             <select id="features-dropdown" form="survey-form">
@@ -59,6 +60,53 @@
                 <option id="community">Community</option>
                 <option id="open-source">Open source</option>
             </select>
+            <br>
+
+            <label for="improve">What would you love to see improved? (check all that apply)</label>
+            <br>
+            <input id="checkbox" type="checkbox" name="improve" value="front-end-projects">
+            <label for="checkbox">Front-end Projects</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="back-end-projects">
+            <label for="checkbox">Back-end Projects</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="data-visualization">
+            <label for="checkbox">Data Visualization</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="challenges">
+            <label for="checkbox">Challenges</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="open-source-community">
+            <label for="checkbox">Open Source Community</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="gitter-help-rooms">
+            <label for="checkbox">Gitter help rooms</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="videos">
+            <label for="checkbox">Videos</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="city-meetups">
+            <label for="checkbox">City Meetups</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="wiki">
+            <label for="checkbox">Wiki</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="forum">
+            <label for="checkbox">Forum</label>
+            <br>
+
+            <input id="checkbox" type="checkbox" name="improve" value="additional-courses">
+            <label for="checkbox">Additional Courses</label>
+            <br>
         
         </form>
     </body>
