added textarea and submit-button

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
             <input id="checkbox" type="checkbox" name="improve" value="additional-courses">
             <label for="checkbox">Additional Courses</label>
             <br>
+
+            <label id="textarea">Any Comments or suggestions?</label>
+            <br>
+            <textarea id="textarea" name="suggestions" rows="5" cols="40">
+            </textarea>
+            <br>
+
+            <input id="submit" type="submit" name="submit" value="submit" class="submit-button">
         
         </form>
     </body>
