--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="veiwport" content="width=device-width, initial-scale=1">
         <title>FCC - SURVEY FORM</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <h1 id="title">FreeCodeCamp Survey Form</h1>
