more html and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <h1 id="title">FreeCodeCamp Survey Form</h1>
-        <p id="description">Thank you for taking the time
-        to help us improve the platform
+        <p id="description"><em>Thank you for taking the time
+        to help us improve the platform</em>
         </p>
 
         <form id="survey-form">
@@ -64,7 +64,7 @@
 
             <label for="features-dropdown">What is your favorite feature of FreeCodeCamp?</label>
             <br>
-            <select id="features-dropdown" form="survey-form">
+            <select id="features-dropdown" form="survey-form" class="form-input">
                 <option value="" disabled selected>Select an option</option>
                 <option id="challenges">Challenges</option>
                 <option id="projects">Projects</option>
